[BT-154] Prefixed state prop in grid example with underscore to not include it in filters. Fixed vertical alignment of editable cell icon. Hiding border between toggle icon and dropdown

--- a/src/framework/filters/dropdown/_toggleFilterDropdownButton.scss
+++ b/src/framework/filters/dropdown/_toggleFilterDropdownButton.scss
@@ -6,5 +6,17 @@
   &.toggleFilterDropdownButton--dropdown-opened {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    border-bottom: 0;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 100%;
+      left: 0;
+      z-index: 2;
+      width: 100%;
+      height: 1px;
+      background: $addedFilter_backgroundColor;
+    }
   }
 }
